# notifier

./: .gitignore  Cargo.toml  DESIGN.md  README.md  config.example.json
.github/workflows/: build.yml
apps/notifier-server/: Cargo.toml  README.md
apps/notifier-server/src/: main.rs
crates/notifier-destination-discord/: Cargo.toml
crates/notifier-destination-discord/src/: lib.rs
crates/notifier-destination-telegram/: Cargo.toml
crates/notifier-destination-telegram/src/: lib.rs
crates/notifier-runtime/: Cargo.toml  README.md
crates/notifier-runtime/src/: config.rs  lib.rs  storage.rs  template.rs
crates/notifier-server/: Cargo.toml
crates/notifier-source-twitcasting/: Cargo.toml
crates/notifier-source-twitcasting/src/: lib.rs
crates/notifier-source-twitch/: Cargo.toml
crates/notifier-source-twitch/src/: lib.rs
crates/notifier-webhook/: Cargo.toml  README.md
crates/notifier-webhook/src/: dedupe.rs  dispatcher.rs  hmac.rs  input.rs  lib.rs  spec.rs
plugins/destinations/discord/: Cargo.toml  README.md
plugins/destinations/discord/src/: lib.rs
plugins/destinations/telegram/: Cargo.toml  README.md
plugins/destinations/telegram/src/: lib.rs
plugins/sources/nitter/: Cargo.toml  README.md
plugins/sources/nitter/src/: lib.rs
plugins/sources/twitcasting/: Cargo.toml  README.md
plugins/sources/twitcasting/src/: lib.rs
plugins/sources/twitch/: Cargo.toml  README.md
plugins/sources/twitch/src/: lib.rs
src/: main.rs
src/controller/: index.html  mod.rs
src/discord/: mod.rs
src/frontend/: index.html
src/twitcasting/: list.rs  mod.rs  subscribe.rs  unsubscribe.rs  webhook.rs
src/twitch/: list.rs  mod.rs  subscribe.rs  unsubscribe.rs  webhook.rs
