[package]
name = "notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
env_logger = "0.11"
log = "0.4"
serenity = "0.12"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
serde_json = "1"
figment = { version = "0.10", features = ["json"] }
url = { version = "2", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
log-once = "0.4"
r2d2_sqlite = "0.27"
r2d2 = "0.8"
rusqlite = "0.34"
regex = "1.11"
