[workspace]
members = [
    "crates/notifier-runtime",
    "plugins/sources/nitter",
    "plugins/sources/twitch",
    "plugins/sources/twitcasting",
    "plugins/destinations/discord",
    "plugins/destinations/telegram",
    "apps/notifier-server",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1"
http-body-util = "0.1"
minijinja = { version = "2", features = ["builtins", "json"] }
rand = "0.10"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rss = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = { version = "1", features = ["derive", "url2"] }
serenity = { version = "0.12.5", default-features = false, features = ["builder", "http", "model", "rustls_backend"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
twitcasting = "0.2"
twitch_api = { version = "0.8.0", features = ["eventsub", "helix", "hmac", "reqwest", "twitch_oauth2"] }
