[workspace]
members = [
    "apps/notifier-server",
]
exclude = [
    "crates/notifier-runtime",
    "plugins/destinations/discord",
    "plugins/destinations/telegram",
    "plugins/sources/nitter",
    "plugins/sources/twitcasting",
    "plugins/sources/twitch",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
