[package]
name = "notifier-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
notifier-destination-discord = { path = "../notifier-destination-discord" }
notifier-destination-telegram = { path = "../notifier-destination-telegram" }
notifier-runtime = { path = "../notifier-runtime" }
notifier-source-twitch = { path = "../notifier-source-twitch" }
notifier-source-twitcasting = { path = "../notifier-source-twitcasting" }
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
