[package]
name = "notifier-webhook"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
hex = "0.4"
hmac = "0.12"
notifier-runtime = { path = "../notifier-runtime" }
schemars = { version = "1", features = ["derive", "url2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"