[package]
name = "notifier-destination-discord"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
notifier-runtime = { path = "../../../crates/notifier-runtime" }
schemars = { version = "1", features = ["derive", "url2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "http", "model", "rustls_backend"] }
tracing = "0.1"
