[package]
name = "notifier-destination-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
notifier-runtime = { path = "../../../crates/notifier-runtime" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
teloxide.workspace = true
