[package]
name = "notifier-destination-telegram"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
notifier-runtime = { path = "../../../crates/notifier-runtime" }
schemars = { version = "1", features = ["derive", "url2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }
tracing = "0.1"
