[package]
name = "notifier-source-nitter"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
notifier-runtime = { path = "../../../crates/notifier-runtime" }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rss = "2"
schemars = { version = "1", features = ["derive", "url2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = { version = "2", features = ["serde"] }
