[package]
name = "notifier-source-twitcasting"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
notifier-runtime = { path = "../../../crates/notifier-runtime" }
notifier-webhook = { path = "../../../crates/notifier-webhook" }
schemars = { version = "1", features = ["derive", "url2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
twitcasting = "0.2"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
